0.1 (October 31, 2011)
  Defaults :capitalize to true
  